# notifications

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
backend/admin_panel/: Dockerfile  requirements.txt  start.sh
backend/admin_panel/config/: celery.py  settings.py  settings_old.py  urls.py
backend/admin_panel/config/components/: constants.py  database.py
backend/admin_panel/db/: redis_storage.py
backend/admin_panel/default_data/: HappyNewYear.html  Welcome.html  services.py
backend/admin_panel/media/emails_template/: mail.html
backend/admin_panel/notice/: admin.py  beats.py  fake_api_request.py  models.py  tasks.py  utils.py  views.py
backend/builder/: Dockerfile  builder.py  requirements.txt
backend/builder/src/config/: config.py
backend/notice_api/: Dockerfile  README.md  requirements.txt  start.sh
backend/notice_api/src/: main.py
backend/rabbitmq/: .erlang.cookie  cluster-entrypoint.sh
backend/sender/: Dockerfile  requirements.txt  sender.py
nginx/: nginx.conf
nginx/configs/: admin_panel.conf  notice.conf
schemas/: main_schema.drawio  notice_from_admin_panel.puml  notice_from_apis.puml  notice_generator_common.puml  notice_generator_forgotten_bookmarks.puml  notice_generator_new_movies.puml  notice_generator_new_user_likes.puml  noutice_from_admin_panel.puml  noutice_from_apis.puml  noutice_generator_common.puml  noutice_generator_forgotten_bookmarks.puml  noutice_generator_new_movies.puml  noutice_generator_new_user_likes.puml
smtp/dkim/: dkim.key  dkim.public
(+50 files in other folders)
