[tool.poetry]
name = "rabbitmq"
version = "0.1.0"
description = ""
authors = ["Kariyma <mariika-sun@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"

[tool.poetry.group.build.dependencies]
backoff = "2.2.1"
loguru = "0.6.0"
fastapi = "0.85.0"
orjson = "3.8.0"
uvicorn = "0.18.3"
uvloop = "0.17.0"
pydantic-env = "0.2.0"
pydantic = {extras = ["dotenv"], version = "1.10.2"}
python-dotenv = "0.21.0"
aio-pika = "8.2.5"
pre-commit = ">=2.19.0"

[tool.poetry.group.admin_panel.dependencies]
django = "4.0.8"
django-split-settings="1.1.0"
django-debug-toolbar="3.5.0"
psycopg2-binary="2.9.3"
celery = "5.2.7"
sqlalchemy = "1.4.45"
django-celery-beat = "2.4.0"
redis = "4.4.0"
backoff = "2.2.1"
pyjwt = "2.4.0"


[tool.poetry.group.linters.dependencies]
mypy = "^0.991"
lxml = "^4.9.2"
flake8-html = "^0.4.3"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
